[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aiu_trace_analyzer"
dynamic = ["version"]
authors = [
    { name="Lars Schneidenbach et. al" },
]
description = "Event Profile/Trace Analyzer (acelyzer) for post-processing, combining, or enhancing of trace files."
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/IBM/aiu-trace-analyzer"
Issues = "https://github.com/IBM/aiu-trace-analyzer/issues"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
acelyzer = "acelyzer.acelyzer:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
aiu_trace_analyzer = ["profiles/*"]

[tool.setuptools_scm]
